# market-maker

./: .gitignore  Cargo.toml  Makefile  README.md  dev.base.json  mm_config.json.example  prod.base.json  prod.bcat.json  prod.blast.json  prod.zoom.json
crates/mm_token_toolkit/: Cargo.toml
crates/mm_token_toolkit/src/: bundler.rs  lib.rs  utils.rs
crates/mm_token_toolkit/src/bloxroute/: bundle.rs  middleware.rs  mod.rs
crates/mm_token_toolkit/src/common/: jsonrpc.rs  mod.rs  relayer.rs
crates/mm_token_utils/: Cargo.toml
crates/mm_token_utils/src/: env.rs  lib.rs  log.rs  utils.rs
crates/mm_token_utils/src/abi/: AvabotRouter.json  MemeToken.json  MemeTokenController.json  mod.rs
crates/mm_token_utils/src/constants/: addresses.rs  avabot_router.rs  disperse_router.rs  mod.rs  uniswap.rs  weth.rs
crates/provider_utils/: Cargo.toml
crates/provider_utils/src/: constants.rs  enums.rs  http_providers.rs  lib.rs  networks.rs  ws_providers.rs
