[workspace]
members = [
    "bin/mm_token_rs",
    "bin/telegram_bot_rs",
    "crates/mm_token_toolkit",
    "crates/mm_token_utils",
    "crates/provider_utils",
]

resolver = "2"

[workspace.dependencies]
mm_token_toolkit = { path = "crates/mm_token_toolkit" }
mm_token_utils = { path = "crates/mm_token_utils" }
mm_token_rs = { path = "bin/mm_token_rs" }
provider_utils = { path = "crates/provider_utils" }

anyhow = "1.0.71"
chrono = "0.4.23"
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots", version = "0.15.0" }
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.5"
hex = "0.4"
itertools = "0.12"
log = "0.4.20"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust_decimal = "1.34"
bigdecimal = "0.4.3"
serde = "1.0.145"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tiny-bip39 = "1.0.0"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
url = "2.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_codegen = "0.5.0"
teloxide = { version = "0.12.2", features = ["macros"] }
lettre = { version = "0.11.4" }
cached = "0.49"