[package]
name = "mm_token_toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
mm_token_utils = { workspace = true }
provider_utils = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
ethers = { workspace = true }
ethers-flashbots = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
