[package]
name = "mm_token_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
provider_utils = { workspace = true }

chrono = { workspace = true }
ethers = { workspace = true }
fern = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tiny-bip39 = { workspace = true }
url = { workspace = true }
